WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250789
[iOS] Crash in WebKit::ProcessThrottler::didConnectToProcess
https://bugs.webkit.org/show_bug.cgi?id=250789
Summary
[iOS] Crash in WebKit::ProcessThrottler::didConnectToProcess
Miguel Salinas
Reported
2023-01-18 13:31:00 PST
There's a release assertion that needs to be updated in WebKit::ProcessThrottler::didConnectToProcess
Attachments
Add attachment
proposed patch, testcase, etc.
Miguel Salinas
Comment 1
2023-01-18 13:31:32 PST
rdar://104382617
Miguel Salinas
Comment 2
2023-01-18 14:08:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8793
EWS
Comment 3
2023-01-20 08:35:34 PST
Committed
259137@main
(2663e6d98e20): <
https://commits.webkit.org/259137@main
> Reviewed commits have been landed. Closing PR #8793 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug