Cherry-pick 2663e6d98e20. rdar://problem/104382617

[iOS] Fix release assertion in WebKit::ProcessThrottler::didConnectToProcess
    https://bugs.webkit.org/show_bug.cgi?id=250789

    Reviewed by Chris Dumez.

    This assertion needs to be updated after adding the option to drop the
    'Suspended' assertion.

    * Source/WebKit/UIProcess/ProcessThrottler.cpp:
    (WebKit::ProcessThrottler::didConnectToProcess):

    Canonical link: https://commits.webkit.org/259137@main

Canonical link: https://commits.webkit.org/258608.66@safari-7615.1.18-branch